--- a/dist.ini
+++ b/dist.ini
@@ -4,17 +4,21 @@ license = Perl_5
 copyright_holder = Nikonov Alexey
 copyright_year   = 2013
 
-version = 0.009
+version = 0.10
 
 [@Basic]
 
 [Prereqs]
-FAW::uRoles = 0.01;
-Data::Dump  = 1.22;
-FindBin     = 1.51;
-Try::Tiny   = 0.22;
-POSIX       = 1.38_03;
-JSON        = 2.90;
-Encode      = 2.60;
+FAW::uRoles = 0.01
+Data::Dump  = 1.22
+FindBin     = 1.51
+Try::Tiny   = 0.22
+POSIX       = 1.38_03
+JSON        = 2.90
+Encode      = 2.60
 
 [AutoVersion]
+
+[@Git]
+push_to = public
+
