Поправлены настройки сборщика

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name    = Dancer-Plugin-Common
-author  = Nikonov Alexey <NikonovAlexey@inbox.ru>
+author  = Nikonov Alexey aka Galadhon <NikonovAlexey@inbox.ru>
 license = Perl_5
-copyright_holder = Nikonov Alexey
+copyright_holder = Nikonov Alexey aka Galadhon <NikonovAlexey@inbox.ru>
 copyright_year   = 2013
 
 version = 0.10
@@ -9,15 +9,18 @@ version = 0.10
 [@Basic]
 
 [Prereqs]
-FAW::uRoles = 0.01
 Data::Dump  = 1.22
 FindBin     = 1.51
 Try::Tiny   = 0.22
 POSIX       = 1.38_03
 JSON        = 2.90
 Encode      = 2.60
-
-[AutoVersion]
+Dancer::Engine = 0
+Dancer::Plugin = 0
+Dancer::Plugin::ImageWork   = 0
+Dancer::Plugin::DBIC        = 0
+Dancer::Plugin::FlashNote   = 0
+Dancer::Plugin::uRBAC       = 0
 
 [@Git]
 push_to = public
