--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Nikonov Alexey aka Galadhon <NikonovAlexey@inbox.ru>
 copyright_year   = 2013
 
-version = 0.10
+version = 0.14
 
 [@Basic]
 
@@ -12,7 +12,7 @@ version = 0.10
 Data::Dump  = 1.22
 FindBin     = 1.51
 Try::Tiny   = 0.22
-POSIX       = 1.38_03
+POSIX       = 1.32
 JSON        = 2.90
 Encode      = 2.60
 Dancer::Engine = 0
